<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B1F">

    <TextView
        android:id="@+id/tv_detail_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/detail_item_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_detail_video_thumbnail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/apply_video_image_background"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_video_title"
        app:srcCompat="@drawable/galaxy" />

    <TextView
        android:id="@+id/tv_detail_count_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="684"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_count_view"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_count_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_count_view" />

    <TextView
        android:id="@+id/tv_detail_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="29,564"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_count_rec"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_count_like"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_video_thumbnail" />

    <TextView
        android:id="@+id/tv_detail_count_rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="4.0/5"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_count_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_count_view"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_count_view" />

    <TextView
        android:id="@+id/tv_detail_text_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail_liked"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_text_view"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_count_like"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_count_like"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_text_view" />

    <TextView
        android:id="@+id/tv_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/detail_view_count"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_count_view"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_count_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_count_view" />

    <TextView
        android:id="@+id/tv_detail_text_rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/apply_score_icon_resize"
        android:gravity="center"
        android:text="@string/detail_recommended"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_text_view"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_count_rec"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_count_rec"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/apply_video_image_background"
        android:text="@string/detail_button_save"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_text_like" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/apply_video_image_background"
        android:text="@string/detail_button_share"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/tv_detail_upload_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/detail_upload_date"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_text_description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_upload_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_upload_date" />

    <TextView
        android:id="@+id/tv_detail_text_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="설명"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


</androidx.constraintlayout.widget.ConstraintLayout>